Fixed height alignment issue

--- a/scss/_styles.scss
+++ b/scss/_styles.scss
@@ -7716,7 +7716,7 @@ input.ion-google-place[readonly] {
 }
 
 .healthinfoHeight-IOS {
-  width: 46%;
+  width: 40%;
       margin-left: -37px;
 }
 
